--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -12,6 +12,8 @@
   <script src="vendor/jquery/jquery-2.1.4.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/gamecontroller.js"></script>
+  <script src="js/cardscontroller.js"></script>
 </head>
 <body>
 	<header>
