--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -11,6 +11,9 @@
   <script src="vendor/angular/angular-animate.min.js"></script>
   <script src="vendor/jquery/jquery-2.1.4.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/bingo.js"></script>
+  <script src="js/bingocard.js"></script>
+  <script src="js/player.js"></script>
   <script src="js/app.js"></script>
   <script src="js/gamecontroller.js"></script>
   <script src="js/cardscontroller.js"></script>
