--- a/builds/development/index.html
+++ b/builds/development/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Bingo</title>
   <meta name="viewport" content="width=device-width, user-scalable=no">
+  <link href='http://fonts.googleapis.com/css?family=Overlock:400,900italic,700italic,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script src="vendor/angular/angular.min.js"></script>
@@ -15,12 +16,13 @@
   <script src="js/bingocard.js"></script>
   <script src="js/player.js"></script>
   <script src="js/app.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/gamecontroller.js"></script>
   <script src="js/cardscontroller.js"></script>
 </head>
 <body>
 	<header>
-		<nav ng-include="'views/nav.html'"></nav>
+		<!-- <nav ng-include="'views/nav.html'"></nav> -->
 	</header>
   <div class="col-sm-10 col-sm-offset-1">
     <main ng-view></main>
